Plot RMSE and std

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -779,7 +779,119 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_rmse(error_list):\n",
+    "\terror_list_full = torch.nn.utils.rnn.pad_sequence(error_list, batch_first = True, padding_value=float(\"nan\"))\n",
+    "\terror_square = torch.square(error_list_full)\n",
+    "\terror_mse = torch.nanmean(error_square, dim=0)\n",
+    "\terror_rmse = torch.sqrt(error_mse)\n",
+    "\treturn error_rmse\n",
+    "\n",
+    "def calc_std(error_list):\n",
+    "\terror_list_full = torch.nn.utils.rnn.pad_sequence(error_list, batch_first = True, padding_value=float(\"nan\"))\n",
+    "\terror_mean = torch.nanmean(error_list_full, dim=0)\n",
+    "\tnan_mask = ~torch.isnan(error_list_full)\n",
+    "\tcounts = nan_mask.sum(dim=(0))[:,0]\n",
+    "\terror_diff = error_list_full - error_mean\n",
+    "\terror_sqdiff = torch.square(error_diff)\n",
+    "\terror_sumsqdiff = torch.nansum(error_sqdiff, dim=0)\n",
+    "\terror_var = error_sumsqdiff / (counts-1).unsqueeze(1)\n",
+    "\terror_std = torch.sqrt(error_var)\n",
+    "\treturn error_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(torch.nan_to_num(q_error_list_full).size())\n",
+    "print(torch.max(torch.nan_to_num(q_error_list_full[:, :150, 0])))\n",
+    "print(torch.min(torch.nan_to_num(q_error_list_full[:, :150, 0])))\n",
+    "print(torch.argmin(torch.nan_to_num(q_error_list_full[:, 120, 0])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy_error_rmse = calc_rmse(xy_error_list)\n",
+    "xy_error_std = calc_std(xy_error_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_error_std(error_rmse, error_std, ylim, y1label, y2label, yaxislabel, title_string):\n",
+    "\tt = torch.arange(error_rmse.size(0))/100\n",
+    "\n",
+    "\ty = error_rmse.cpu().detach().numpy()\n",
+    "\tystd = error_std.cpu().detach().numpy()\n",
+    "\n",
+    "\tfig, ax = plt.subplots(figsize=(8, 4))\n",
+    "\n",
+    "\t# Plot each column with shaded std area\n",
+    "\tcolors = [\"C0\", \"C1\"]\n",
+    "\tfor i, label in enumerate([y1label, y2label]):\n",
+    "\t\tax.plot(t, y[:, i], label=label, color = colors[i], linewidth = 2.5)\n",
+    "\t\tax.fill_between(\n",
+    "\t\t\tt,\n",
+    "\t\t\t(y[:, i] - ystd[:, i]),\n",
+    "\t\t\t(y[:, i] + ystd[:, i]),\n",
+    "\t\t\talpha=0.1,\n",
+    "\t\t\tcolor = colors[i]\n",
+    "\t\t)\n",
+    "\t\tax.plot(t, (y[:, i] - ystd[:, i]), linestyle=\"--\", color = colors[i], alpha = 0.5)\n",
+    "\t\tax.plot(t, (y[:, i] + ystd[:, i]), linestyle=\"--\", color = colors[i], alpha = 0.5)\n",
+    "\n",
+    "\tax.set_xlabel('Time (s)')\n",
+    "\tax.set_ylabel(yaxislabel)\n",
+    "\tax.set_title('Learned dynamics prediction error, ' + title_string)\n",
+    "\tax.set_ylim(ylim)\n",
+    "\tax.set_xlim((0, error_rmse.size(0)/100))\n",
+    "\tax.legend()\n",
+    "\tax.grid()\n",
+    "\tplt.tight_layout()\n",
+    "\tplt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_error_std(q_error_rmse, q_error_std, (0, 0.2), \"q0\", \"q1\", \"RMSE (rad)\", \"joint angles\")\n",
+    "plot_error_std(xy_error_rmse, xy_error_std, (0, 0.4), \"x\", \"y\", \"RMSE (m)\", \"end-effector position\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = 0\n",
+    "for item in q_error_list:\n",
+    "\tif item.size(0) > 100:\n",
+    "\t\tcounter += 1\n",
+    "print(counter)"
+   ]
   }
  ],
  "metadata": {
