Edit plotting functinos to allow side by side

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -58,65 +58,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_single_vs_time(single_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "def plot_single_vs_time(single_list, dt, ylabel, title, ylim=None, log=False, ax=None):\n",
     "\ttime = torch.linspace(0, (single_list.shape[0] - 1) * dt, single_list.shape[0]).numpy()\n",
     "\tsingle_np = single_list.cpu().numpy()\n",
     "\n",
-    "\tplt.figure(figsize=(7, 3))\n",
-    "\tplt.plot(time, single_np, label=ylabel)\n",
-    "\tplt.xlabel(\"Time (s)\")\n",
-    "\tplt.ylabel(ylabel)\n",
-    "\tplt.title(title)\n",
+    "\tif ax is None:\n",
+    "\t\tax = plt.gca()\n",
+    "\tax.plot(time, single_np, label=ylabel)\n",
+    "\tax.set_xlabel(\"Time (s)\")\n",
+    "\tax.set_ylabel(ylabel)\n",
+    "\tax.set_title(title)\n",
     "\tif ylim is not None:\n",
-    "\t\tplt.ylim(ylim)\n",
+    "\t\tax.set_ylim(ylim)\n",
     "\tif log:\n",
-    "\t\tplt.yscale(\"log\")\n",
-    "\tplt.legend()\n",
-    "\tplt.grid(True)\n",
-    "\t#plt.yscale(\"log\")\n",
-    "\tplt.tight_layout()\n",
-    "\tplt.show()\n",
+    "\t\tax.set_yscale(\"log\")\n",
+    "\tax.grid(True)\n",
+    "\tax.legend()\n",
     "\n",
-    "def plot_double_vs_time(double_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "\n",
+    "def plot_double_vs_time(double_list, dt, ylabel, title, ylim=None, log=False, ax=None):\n",
     "\ttime = torch.linspace(0, (double_list.shape[0] - 1) * dt, double_list.shape[0]).numpy()\n",
     "\tdouble_np = double_list.cpu().numpy()\n",
     "\n",
-    "\tplt.figure(figsize=(7, 3))\n",
-    "\tplt.plot(time, double_np[:, 0], label=ylabel+\"0\")\n",
-    "\tplt.plot(time, double_np[:, 1], label=ylabel+\"1\")\n",
-    "\tplt.xlabel(\"Time (s)\")\n",
-    "\tplt.ylabel(ylabel)\n",
-    "\tplt.title(title)\n",
+    "\tif ax is None:\n",
+    "\t\tax = plt.gca()\n",
+    "\tax.plot(time, double_np[:, 0], label=ylabel + \"0\")\n",
+    "\tax.plot(time, double_np[:, 1], label=ylabel + \"1\")\n",
+    "\tax.set_xlabel(\"Time (s)\")\n",
+    "\tax.set_ylabel(ylabel)\n",
+    "\tax.set_title(title)\n",
     "\tif ylim is not None:\n",
-    "\t\tplt.ylim(ylim)\n",
+    "\t\tax.set_ylim(ylim)\n",
     "\tif log:\n",
-    "\t\tplt.yscale(\"log\")\n",
-    "\tplt.legend()\n",
-    "\tplt.grid(True)\n",
-    "\tplt.tight_layout()\n",
-    "\tplt.show()\n",
+    "\t\tax.set_yscale(\"log\")\n",
+    "\tax.grid(True)\n",
+    "\tax.legend()\n",
     "\n",
-    "def plot_quad_vs_time(quad_list, dt, ylabel, title, ylim = None, log = False):\n",
+    "\n",
+    "def plot_quad_vs_time(quad_list, dt, ylabel, title, ylim=None, log=False, ax=None):\n",
     "\ttime = torch.linspace(0, (quad_list.shape[0] - 1) * dt, quad_list.shape[0]).numpy()\n",
     "\tquad_np = quad_list.cpu().numpy()\n",
-    "\t\n",
     "\n",
-    "\tplt.figure(figsize=(7, 3))\n",
-    "\tplt.plot(time, quad_np[:, 0], label=\"Y\")\n",
-    "\tplt.plot(time, quad_np[:, 1], label=\"Y'\")\n",
-    "\tplt.plot(time, quad_np[:, 2], label=\"Y''\")\n",
-    "\tplt.plot(time, quad_np[:, 3], label=\"Y'''\")\n",
-    "\tplt.xlabel(\"Time (s)\")\n",
-    "\tplt.ylabel(ylabel)\n",
-    "\tplt.title(title)\n",
+    "\tif ax is None:\n",
+    "\t\tax = plt.gca()\n",
+    "\tax.plot(time, quad_np[:, 0], label=\"Y\")\n",
+    "\tax.plot(time, quad_np[:, 1], label=\"Y'\")\n",
+    "\tax.plot(time, quad_np[:, 2], label=\"Y''\")\n",
+    "\tax.plot(time, quad_np[:, 3], label=\"Y'''\")\n",
+    "\tax.set_xlabel(\"Time (s)\")\n",
+    "\tax.set_ylabel(ylabel)\n",
+    "\tax.set_title(title)\n",
     "\tif ylim is not None:\n",
-    "\t\tplt.ylim(ylim)\n",
+    "\t\tax.set_ylim(ylim)\n",
     "\tif log:\n",
-    "\t\tplt.yscale(\"log\")\n",
-    "\tplt.legend()\n",
-    "\tplt.grid(True)\n",
+    "\t\tax.set_yscale(\"log\")\n",
+    "\tax.grid(True)\n",
+    "\tax.legend()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_side_by_side(plot_configs):\n",
+    "\t\"\"\"\n",
+    "\tplot_configs: list of dicts, each containing:\n",
+    "\t{\n",
+    "\t\t\"type\": \"single\" | \"double\" | \"quad\",\n",
+    "\t\t\"data\": torch.Tensor,\n",
+    "\t\t\"dt\": float,\n",
+    "\t\t\"ylabel\": str,\n",
+    "\t\t\"title\": str,\n",
+    "\t\t\"ylim\": tuple or None,\n",
+    "\t\t\"log\": bool\n",
+    "\t}\n",
+    "\t\"\"\"\n",
+    "\tn = len(plot_configs)\n",
+    "\tfig, axes = plt.subplots(1, n, figsize=(4 * n, 2.5))\n",
+    "\n",
+    "\tif n == 1:\n",
+    "\t\taxes = [axes]\n",
+    "\n",
+    "\tfor i, config in enumerate(plot_configs):\n",
+    "\t\tax = axes[i]\n",
+    "\t\tkwargs = {\n",
+    "\t\t\t\"dt\": config[\"dt\"],\n",
+    "\t\t\t\"ylabel\": config[\"ylabel\"],\n",
+    "\t\t\t\"title\": config[\"title\"],\n",
+    "\t\t\t\"ylim\": config.get(\"ylim\"),\n",
+    "\t\t\t\"log\": config.get(\"log\", False),\n",
+    "\t\t\t\"ax\": ax\n",
+    "\t\t}\n",
+    "\n",
+    "\t\tif config[\"type\"] == \"single\":\n",
+    "\t\t\tplot_single_vs_time(config[\"data\"], **kwargs)\n",
+    "\t\telif config[\"type\"] == \"double\":\n",
+    "\t\t\tplot_double_vs_time(config[\"data\"], **kwargs)\n",
+    "\t\telif config[\"type\"] == \"quad\":\n",
+    "\t\t\tplot_quad_vs_time(config[\"data\"], **kwargs)\n",
+    "\t\telse:\n",
+    "\t\t\traise ValueError(f\"Unknown plot type: {config['type']}\")\n",
+    "\n",
     "\tplt.tight_layout()\n",
-    "\tplt.show()"
+    "\tplt.show()\n"
    ]
   },
   {
