Update desired location, starting location

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -200,7 +200,9 @@
     "#xy_des_real = torch.tensor([1.9090255, -2.5156569]).requires_grad_().to(device)\n",
     "# THE FOLLOWING COORDINATES RESULT IN STABLE Y_DES FOR k_spring = [0.0, 0.5]\n",
     "#xy_des_real = torch.tensor([1.9218631, -2.5156569]).requires_grad_().to(device)\n",
-    "xy_des_real = torch.tensor([1.16138947010040283, -2.785550117492676]).requires_grad_().to(device)\n",
+    "\n",
+    "\n",
+    "xy_des_real = torch.tensor([1.5141, 1.855]).requires_grad_().to(device)\n",
     "\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
@@ -278,7 +280,7 @@
    "outputs": [],
    "source": [
     "#xy_start = torch.tensor([2, -1.9]).requires_grad_().to(device)\n",
-    "xy_start = xy_des_real * 1.01\n",
+    "xy_start = xy_des_real * 1.05\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
