Check desired alpha, beta

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -259,11 +259,16 @@
     "Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, G_th_des, device)\n",
     "Y_des = torch.tensor([[Y_des_u[0,0]], [0], [0], [0]]).to(device)\n",
     "\n",
+    "alpha_des, beta_des = normal_form.calculate_alpha_beta(th_des, th_d_des, M_th_des, G_th_des, A_th_des, Y_des)\n",
+    "\n",
     "print(\"M_th des:\\n\", M_th_des)\n",
     "print(\"G_th des:\\n\", G_th_des)\n",
     "\n",
     "print(\"Y_des_u:\\n\", Y_des_u)\n",
-    "print(\"Y_des:\\n\", Y_des)"
+    "print(\"Y_des:\\n\", Y_des)\n",
+    "\n",
+    "print(\"alpha_des:\", alpha_des.item())\n",
+    "print(\"beta_des:\", beta_des.item())"
    ]
   },
   {
