Store true alpha, beta, add clamping (not used)

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -366,6 +366,7 @@
     "v_series_thsim = torch.empty((0,1)).to(device)\n",
     "u_series_thsim = torch.empty((0,1)).to(device)\n",
     "alpha_beta_series_thsim = torch.empty((0,2)).to(device)\n",
+    "alpha_beta_true_series_thsim = torch.empty((0,2)).to(device)\n",
     "\n",
     "\n",
     "dt = 0.01\n",
@@ -403,10 +404,15 @@
     "\t\t\t\t\t\t [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
     "\tM_th = M_th * th/th\n",
     "\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
-    "\t#A_th = torch.tensor([[1], [0]]).to(device)\n",
     "\n",
     "\tY = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
-    "\talpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
+    "\talpha_true, beta_true = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
+    "\n",
+    "\talpha = torch.clamp(alpha_true, min = -alpha_des, max = alpha_des)\n",
+    "\tbeta = beta_true.sign() * torch.clamp(beta_true.abs(), min = beta_des)\n",
+    "\talpha, beta = alpha_des, beta_des\n",
+    "\talpha = alpha_true\n",
+    "\tbeta = beta_true\n",
     "\n",
     "\tv = normal_form.calculate_v(Y, Y_des, K)\n",
     "\tu = normal_form.calculate_u(alpha, beta, v)\n",
