Change prints, save true alpha, beta

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -422,12 +422,11 @@
     "\t\tprint(\"q_hat:\", q_hat[0,0].item(), q_hat[0,1].item())\n",
     "\t\tprint(\"th:\", th[0,0].item(), th[0,1].item())\n",
     "\t\tprint(\"th_d:\", th_d[0,0].item(), th_d[0,1].item())\n",
-    "\t\tprint(\"alpha:\", alpha.item())\n",
-    "\t\tprint(\"beta:\", beta.item())\n",
+    "\t\t#print(\"alpha:\", alpha.item())\n",
+    "\t\t#print(\"beta:\", beta.item())\n",
     "\t\tprint(\"Y:\", Y)\n",
     "\t\tprint(\"v:\", v.item())\n",
     "\t\tprint(\"u:\", u.item())\n",
-    "\t\tprint(\"\\n\")\n",
     "\n",
     "\n",
     "\n",
@@ -453,6 +452,12 @@
     "\tq_est = transforms.wrap_to_pi(q_est)\n",
     "\tq_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
     "\n",
+    "\tprint(\"tau_th:\", tau_th)\n",
+    "\tprint(\"th_d:\", th_d)\n",
+    "\tprint(\"th:\", th)\n",
+    "\tprint(\"q_est:\", q_est)\n",
+    "\tprint(\"q_d_est:\", q_d_est)\n",
+    "\tprint(\"\\n\")\n",
     "\n",
     "\t\"\"\" Store data for plotting \"\"\"\n",
     "\n",
@@ -467,6 +472,7 @@
     "\tu_series_thsim = torch.cat((u_series_thsim, u.detach()), dim=0)\n",
     "\tY_series_thsim = torch.cat((Y_series_thsim, Y.detach().T))\n",
     "\talpha_beta_series_thsim = torch.cat((alpha_beta_series_thsim, torch.tensor([[alpha, beta]]).to(device)))\n",
+    "\talpha_beta_true_series_thsim = torch.cat((alpha_beta_true_series_thsim, torch.tensor([[alpha_true, beta_true]]).to(device)))\n",
     "\t#print(\"\")\n",
     "\n",
     "\tif torch.isnan(th[0,0]):\n",
