Same alpha, beta logging for qsim

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -503,6 +503,7 @@
     "v_series_qsim = torch.empty((0,1)).to(device)\n",
     "u_series_qsim = torch.empty((0,1)).to(device)\n",
     "alpha_beta_series_qsim = torch.empty((0,2)).to(device)\n",
+    "alpha_beta_true_series_qsim = torch.empty((0,2)).to(device)\n",
     "\n",
     "\n",
     "dt = 0.01\n",
@@ -554,7 +555,11 @@
     "\tA_th = torch.tensor([[1], [0]]).to(device)\n",
     "\n",
     "\tY = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
-    "\talpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
+    "\talpha_true, beta_true = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
+    "\t#alpha = torch.clamp(alpha_true, min = -alpha_des, max = alpha_des)\n",
+    "\t#beta = beta_true.sign() * torch.clamp(beta_true.abs(), min = beta_des)\n",
+    "\t#alpha, beta = alpha_des, beta_des\n",
+    "\talpha, beta = alpha_true, beta_true\n",
     "\n",
     "\tv = normal_form.calculate_v(Y, Y_des, K)\n",
     "\tu = normal_form.calculate_u(alpha, beta, v)\n",
@@ -606,6 +611,7 @@
     "\tu_series_qsim = torch.cat((u_series_qsim, u.detach()), dim=0)\n",
     "\tY_series_qsim = torch.cat((Y_series_qsim, Y.detach().T))\n",
     "\talpha_beta_series_qsim = torch.cat((alpha_beta_series_qsim, torch.tensor([[alpha, beta]]).to(device)))\n",
+    "\talpha_beta_true_series_qsim = torch.cat((alpha_beta_true_series_qsim, torch.tensor([[alpha_true, beta_true]]).to(device)))\n",
     "\t#print(\"\")\n",
     "\n",
     "\tif torch.isnan(th[0,0]):\n",
