small changes to qsim

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -507,7 +507,7 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 5\n",
+    "t_end = 10\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "q_real = q_start\n",
@@ -521,7 +521,7 @@
     "\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
     "\tprint(t_string, end='\\r', flush=True)\n",
     "\n",
-    "\tis_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
+    "\t#is_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
     "\tif fix_q and model_cw != is_clockwise:\n",
     "\t\tprint(\"fixing value to\", \"clockwise\" if model_cw else \"counterclockwise\")\n",
     "\t\tq = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
@@ -552,7 +552,6 @@
     "\t\t\t\t\t\t [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
     "\tM_th = M_th * th/th\n",
     "\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
-    "\tA_th = torch.tensor([[1], [0]]).to(device)\n",
     "\n",
     "\tY = normal_form.calculate_Y(th, th_d, M_th, G_th, device)\n",
     "\talpha_true, beta_true = normal_form.calculate_alpha_beta(th, th_d, M_th, G_th, A_th, Y)\n",
@@ -575,7 +574,6 @@
     "\t\t#print(\"Y_des:\", Y_des)\n",
     "\t\tprint(\"v:\", v.item())\n",
     "\t\tprint(\"u:\", u.item())\n",
-    "\t\tprint(\"\\n\")\n",
     "\n",
     "\n",
     "\n",
