Changes to forward and inverse calculation for congruence with th_sim

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -540,6 +540,9 @@
     "\t\n",
     "\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\t\n",
+    "\tJ_h = model.jacobian_enc(q, is_clockwise).squeeze(0)\n",
+    "\tJ_h_trans = torch.transpose(J_h, 0, 1)\n",
+    "\n",
     "\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
     "\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
@@ -547,7 +550,7 @@
     "\tG_q_est = dynamics.add_spring_force_G_q(rp, q, G_q_est, k_spring)\n",
     "\tA_q_est = dynamics.input_matrix(rp, q.squeeze(0))\n",
     "\n",
-    "\t_, _, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "\t_, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
     "\tM_th = torch.tensor([[rp[\"m1\"], 0.], \n",
     "\t\t\t\t\t\t [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
     "\tM_th = M_th * th/th\n",
@@ -580,12 +583,14 @@
     "\t\"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
     "\t\n",
-    "\tM_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
-    "\tG_q_real = dynamics.add_spring_force_G_q(rp, q_real, G_q_real, k_spring)\n",
-    "\tA_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
+    "\t#M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
+    "\t#G_q_real = dynamics.add_spring_force_G_q(rp, q_real, G_q_real, k_spring)\n",
     "\n",
+    "\tM_q_real, C_q_real, G_q_real = transforms.transform_dynamical_from_inverse(M_th, C_th, G_th, q, q_d, J_h, J_h_trans)\n",
+    "\t\n",
+    "\tA_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
     "\ttau_q_real = A_q_real * u\n",
-    "\tq_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
+    "\tq_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T) - G_q_real)).T\n",
     "\tq_d_real = q_d_real + q_dd_real * dt\n",
     "\tq_real = q_real + q_d_real * dt\n",
     "\tq_real = transforms.wrap_to_pi(q_real)\n",
