--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -602,6 +602,17 @@
     "\tth_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
     "\tq_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
     "\n",
+    "\tprint(\"tau_q:\", tau_q_real)\n",
+    "\tprint(\"th_d:\", th_d)\n",
+    "\tprint(\"th:\", th)\n",
+    "\tprint(\"q_real:\", q_real)\n",
+    "\tprint(\"q_d_real:\", q_d_real)\n",
+    "\tprint(\"q_est:\", q_est)\n",
+    "\tprint(\"q_d_est:\", q_d_est)\n",
+    "\tprint(\"C_q_real:\", C_q_real)\n",
+    "\tprint(\"\\n\")\n",
+    "\t\n",
+    "\n",
     "\t\"\"\" Store data for plotting \"\"\"\n",
     "\n",
     "\tth_series_qsim = torch.cat((th_series_qsim, th.detach()), dim=0)\n",
