Append alpha, beta for plotting

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -685,6 +685,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "alphas_th_plot = torch.cat([alpha_beta_series_thsim[:, 0].unsqueeze(1), alpha_beta_true_series_thsim[:, 0].unsqueeze(1)], dim = 1)\n",
+    "betas_th_plot = torch.cat([alpha_beta_series_thsim[:, 1].unsqueeze(1), alpha_beta_true_series_thsim[:, 1].unsqueeze(1)], dim = 1)\n",
+    "\n",
+    "alphas_q_plot = torch.cat([alpha_beta_series_qsim[:, 0].unsqueeze(1), alpha_beta_true_series_qsim[:, 0].unsqueeze(1)], dim = 1)\n",
+    "betas_q_plot = torch.cat([alpha_beta_series_qsim[:, 1].unsqueeze(1), alpha_beta_true_series_qsim[:, 1].unsqueeze(1)], dim = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "show_thsim = False\n",
     "show_Ysim = False\n",
     "show_diff = False\n",
