--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -911,7 +911,7 @@
     "plt.title(\"G1 vs th0, for constant th1\")\n",
     "plt.xlim(0, 10)    \n",
     "plt.ylim(-5, 5)\n",
-    "plt.show()"
+    "#plt.show()"
    ]
   },
   {
