loop over spring stiffness instead of th_dots

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -918,7 +918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Calculate $\\alpha$, $\\beta$ for varying $\\{\\theta_0, \\theta_1, \\dot{\\theta}_0, \\dot{\\theta}_1\\}$"
+    "#### Calculate $\\alpha$, $\\beta$ for varying $\\{\\theta_0, \\theta_1, k_0, k_1\\}$"
    ]
   },
   {
@@ -930,16 +930,19 @@
     "plot_th_0_min, plot_th_0_max = 1, 10\n",
     "plot_th_1_min, plot_th_1_max = 0.5, 2\n",
     "\n",
-    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 15).unsqueeze(1).to(device)\n",
-    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 15).unsqueeze(1).to(device)\n",
+    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 25).unsqueeze(1).to(device)\n",
+    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 25).unsqueeze(1).to(device)\n",
     "\n",
     "th_d_plot = torch.tensor([[1.], [1.]]).to(device).unsqueeze(0).requires_grad_()\n",
     "\n",
-    "#k0_range = torch.tensor([[0.], [1.], [10.], [100.]]).to(device)\n",
-    "#k1_range = torch.tensor([[0.], [1.], [10.], [100.]]).to(device)\n",
+    "k0_range = torch.tensor([[1.], [10.], [100.]]).to(device)\n",
+    "k1_range = torch.tensor([[1.], [10.], [100.]]).to(device)\n",
     "\n",
-    "k0_range = torch.tensor([[-10.], [10.]]).to(device)\n",
-    "k1_range = torch.tensor([[-10.], [10.]]).to(device)\n",
+    "#k0_range = torch.tensor([[-10.], [10.]]).to(device)\n",
+    "#k1_range = torch.tensor([[-10.], [10.]]).to(device)\n",
+    "\n",
+    "k0_range = torch.tensor([[10.]]).to(device)\n",
+    "k1_range = torch.tensor([[10.]]).to(device)\n",
     "\n",
     "alphas = torch.ones(len(k0_range), len(k1_range),\n",
     "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
@@ -966,7 +969,7 @@
     "for k, th_0 in enumerate(th_0_range):\n",
     "\tfor l, th_1 in enumerate(th_1_range):\n",
     "\t\tif l == 0:\n",
-    "\t\t\tprint(\"th_0:\", th_0.item(), \"   th_1:\", th_1.item())\n",
+    "\t\t\tprint(\"th_0:\", th_0.item())\n",
     "\n",
     "\t\tis_clockwise_plot = False\n",
     "\t\tq_plot = transforms.analytic_inverse(rp, torch.tensor([th_0, th_1]))[0]\n",
