Calculate G_q_spring separate to not mess up loop

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -989,9 +989,8 @@
     "\t\t\tfor j, k1 in enumerate(k1_range):\n",
     "\t\t\t\t\t\n",
     "\t\t\t\t\tk_spring_plot = [k0, k1]\n",
-    "\n",
-    "\t\t\t\t\tG_q_plot = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot, k_spring_plot)\n",
-    "\t\t\t\t\tG_th_plot = J_h_inv_trans_plot @ G_q_plot\n",
+    "\t\t\t\t\tG_q_plot_spring = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot.clone(), k_spring_plot)\n",
+    "\t\t\t\t\tG_th_plot = J_h_inv_trans_plot @ G_q_plot_spring\n",
     "\t\t\t\t\tM_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
     "\t\t\t\t\tM_th_plot = M_th_plot * th_plot/th_plot   \n",
     "\t\t\t\t\tA_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
