--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -996,7 +996,7 @@
     "\t\t\t\t\tA_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
     "\n",
     "\t\t\t\t\tY_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
-    "\t\t\t\t\t#alpha_plot, beta_plot = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
+    "\t\t\t\t\t\n",
     "\t\t\t\t\talpha, beta = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
     "\t\t\t\t\talphas[i, j, k, l] = alpha.item()  \n",
     "\t\t\t\t\tbetas[i, j, k, l] = beta.item()\n",
@@ -1016,7 +1016,7 @@
     "\n",
     "T0, T1 = torch.meshgrid(th0_vals, th1_vals, indexing='ij')\n",
     "\n",
-    "alphas_plot = torch.clamp(alphas, -100, 100)\n",
+    "alphas_plot = torch.clamp(alphas, -1000, 1000)\n",
     "betas_plot = torch.clamp(betas, -3, 3)\n",
     "\n",
     "outputs = {\n",
@@ -1044,7 +1044,7 @@
     "\t\t\tprint(\"Amin:\", Amin)\n",
     "\t\t\tmaxvalue = torch.max(torch.tensor([-Amin, Amax]))\n",
     "\t\t\tprint(\"maxvalue:\", maxvalue)\n",
-    "\t\t\tif key == \"alphass\" or key == \"betass\":\n",
+    "\t\t\tif key == \"alphass\" or key == \"betas\":\n",
     "\t\t\t\tnorm = TwoSlopeNorm(vmin=-maxvalue,\n",
     "\t\t\t\t\t\t\t\t\tvcenter=0,\n",
     "\t\t\t\t\t\t\t\t\tvmax=maxvalue)#A_flat.max())\n",
