Add same visualisation but for varying th_dot

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -1083,18 +1083,179 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### And now the same but for varying $\\dot{\\theta}$"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plot_th_0_min, plot_th_0_max = 1, 4\n",
+    "plot_th_1_min, plot_th_1_max = 1.3, 1.7\n",
+    "\n",
+    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 15).unsqueeze(1).to(device)\n",
+    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 15).unsqueeze(1).to(device)\n",
+    "\n",
+    "k_spring_plot = torch.tensor([10., 10.]).to(device)\n",
+    "\n",
+    "#th_d_0_range = torch.tensor([[-2.], [0.], [2.]]).to(device)\n",
+    "#th_d_1_range = torch.tensor([[-0.1], [0.], [0.1]]).to(device)\n",
+    "\n",
+    "th_d_0_range = torch.tensor([[0.]]).to(device)\n",
+    "th_d_1_range = torch.tensor([[0.]]).to(device)\n",
+    "\n",
+    "alphas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
+    "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
+    "\n",
+    "betas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
+    "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
+    "\n",
+    "insides = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
+    "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
+    "\n",
+    "Y2s = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
+    "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "for k, th_0 in enumerate(th_0_range):\n",
+    "\tfor l, th_1 in enumerate(th_1_range):\n",
+    "\t\tfor i, th_d_0 in enumerate(th_d_0_range):\n",
+    "\t\t\tfor j, th_d_1 in enumerate(th_d_1_range):\n",
+    "\t\t\t\t\t\n",
+    "\t\t\t\tth_d_plot = torch.tensor([th_d_0, th_d_1]).to(device).unsqueeze(0)\n",
+    "\t\t\t\t\n",
+    "\t\t\t\tif l == 0 and i == 0 and j == 0:\n",
+    "\t\t\t\t\tprint(\"th_0:\", th_0.item())\n",
+    "\n",
+    "\t\t\t\tis_clockwise_plot = False\n",
+    "\t\t\t\tq_plot = transforms.analytic_inverse(rp, torch.tensor([th_0, th_1]))[0]\n",
+    "\t\t\t\tth_plot = torch.cat((th_0, th_1), dim=0).unsqueeze(0).requires_grad_()\n",
+    "\t\t\t\t\n",
+    "\n",
+    "\t\t\t\tq_hat_plot = model.decoder_vmap(th_plot, is_clockwise_plot)\n",
+    "\t\t\t\tq_d_hat_plot = (model.jacobian_dec(th_plot, clockwise=is_clockwise_plot) @ th_d_plot.T).T\n",
+    "\n",
+    "\t\t\t\tJ_h_inv_plot = model.jacobian_dec(th_plot, is_clockwise_plot).squeeze(0)\n",
+    "\t\t\t\tJ_h_inv_trans_plot = torch.transpose(J_h_inv_plot, 0, 1)\n",
+    "\n",
+    "\t\t\t\tM_q_plot, C_q_plot, G_q_plot = dynamics.dynamical_matrices(rp, q_hat_plot.squeeze(0), q_d_hat_plot.squeeze(0))\n",
+    "\t\t\t\tA_q_plot = dynamics.input_matrix(rp, q_hat_plot.squeeze(0))\t\t\t\t\t\n",
+    "\t\t\t\t\n",
+    "\t\t\t\tG_q_plot_spring = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot.clone(), k_spring_plot)\n",
+    "\t\t\t\tG_th_plot = J_h_inv_trans_plot @ G_q_plot_spring\n",
+    "\t\t\t\tM_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
+    "\t\t\t\tM_th_plot = M_th_plot * th_plot/th_plot   \n",
+    "\t\t\t\tA_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
+    "\n",
+    "\t\t\t\tY_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
+    "\t\t\t\tY2s[i, j, k, l] = Y_plot[2].item()\n",
+    "\t\t\t\t\n",
+    "\t\t\t\talpha, beta = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
+    "\t\t\t\talphas[i, j, k, l] = alpha.item()  \n",
+    "\t\t\t\tbetas[i, j, k, l] = beta.item()\n",
+    "\t\t\t\tif torch.isnan(q_plot[0]):\n",
+    "\t\t\t\t\tinsides[i, j, k, l] = 0.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "th0_vals = th_0_range.squeeze().cpu()   # shape (3,)\n",
+    "th1_vals = th_1_range.squeeze().cpu()   # shape (3,)\n",
+    "from matplotlib.colors import TwoSlopeNorm\n",
+    "\n",
+    "T0, T1 = torch.meshgrid(th0_vals, th1_vals, indexing='ij')\n",
+    "\n",
+    "alphas_plot = torch.clamp(alphas, -3000, 3000)\n",
+    "betas_plot = torch.clamp(betas, -3, 3)\n",
+    "Y2s_plot = torch.clamp(Y2s, -3, 3)\n",
+    "\n",
+    "outputs = {\n",
+    "\t\"alphas\": alphas_plot,\n",
+    "\t\"betas\": betas_plot,\n",
+    "\t#\"insides\": insides\n",
+    "\t\"Y2_plots\": Y2s_plot\n",
+    "}\n",
+    "\n",
+    "\n",
+    "n = len(outputs)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i, th_d_0 in enumerate(th_d_0_range):\n",
+    "\tfor j, th_d_1 in enumerate(th_d_1_range):\n",
+    "\n",
+    "\t\tfig, axes = plt.subplots(1, n, figsize=(4*n,4))\n",
+    "\n",
+    "\t\tfor (key, value), ax in zip(outputs.items(), axes):\n",
+    "\t\t\tA_single = value[i, j]\n",
+    "\t\t\tA_flat   = A_single.reshape(-1)  # flatten to (H*W,)\n",
+    "\t\t\tAmax = A_flat.masked_fill(torch.isnan(A_flat), -float('inf')).max()\n",
+    "\t\t\tAmin = A_flat.masked_fill(torch.isnan(A_flat), float('inf')).min()\n",
+    "\t\t\tprint(\"Amax:\", Amax)\n",
+    "\t\t\tprint(\"Amin:\", Amin)\n",
+    "\t\t\tmaxvalue = torch.max(torch.tensor([-Amin/5, Amax/5]))\n",
+    "\t\t\tprint(\"maxvalue:\", maxvalue)\n",
+    "\t\t\tif key == \"alphas\" or key == \"betas\":\n",
+    "\t\t\t\tnorm = TwoSlopeNorm(vmin=-maxvalue,\n",
+    "\t\t\t\t\t\t\t\t\tvcenter=0,\n",
+    "\t\t\t\t\t\t\t\t\tvmax=maxvalue)#A_flat.max())\n",
+    "\t\t\t\tsc = ax.scatter(\n",
+    "\t\t\t\t\tT0.reshape(-1),\n",
+    "\t\t\t\t\tT1.reshape(-1),\n",
+    "\t\t\t\t\tc=A_flat,\n",
+    "\t\t\t\t\ts=100,\n",
+    "\t\t\t\t\tcmap='Spectral',\n",
+    "\t\t\t\t\tnorm = norm\n",
+    "\t\t\t\t)\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tsc = ax.scatter(\n",
+    "\t\t\t\t\tT0.reshape(-1),\n",
+    "\t\t\t\t\tT1.reshape(-1),\n",
+    "\t\t\t\t\tc=A_flat,\n",
+    "\t\t\t\t\ts=100,\n",
+    "\t\t\t\t\tcmap='Spectral',\n",
+    "\t\t\t\t\t#norm = norm\n",
+    "\t\t\t\t)\t\t\t\t\n",
+    "\n",
+    "\t\t\t# make the plot\n",
+    "\t\t\t\n",
+    "\t\t\t\n",
+    "\n",
+    "\t\t\t# add colorbar\n",
+    "\t\t\tcbar = fig.colorbar(sc, ax=ax)\n",
+    "\n",
+    "\t\t\t# labels & title\n",
+    "\t\t\tax.set_title(f\"{key}, thd0={round(th_d_0.item(), 3)}, thd1={round(th_d_1.item(), 3)}\")\n",
+    "\t\t\tax.set_xlabel(\"th0\")\n",
+    "\t\t\tax.set_ylabel(\"th1\")\n",
+    "\n",
+    "\t\tfig.tight_layout()\n",
+    "\t\tplt.show()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
