--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -55,6 +55,7 @@
     "\n",
     "import training_data as training_data\n",
     "import Plotting.theta_visualiser as theta_visualizer\n",
+    "import learning_plotters as lp\n",
     "\n",
     "import autoencoders\n",
     "\n",
@@ -73,7 +74,7 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)\n",
-    "rp = robot_parameters.LUMPED_PARAMETERS\n",
+    "rp = robot_parameters.LUMPED_PARAMETERS.copy()\n",
     "rp[\"m0\"] = 0.0\n",
     "print(rp)\n",
     "\n",
