points plot call change

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -129,8 +129,8 @@
    "source": [
     "masked_points = mask_points((-torch.pi, torch.pi), clockwise = train_clockwise)\n",
     "deshifted_points = transforms.wrap_to_pi(masked_points.clone())\n",
-    "points_plotter(masked_points, extend=\"ccw\")\n",
-    "points_plotter(deshifted_points, extend=\"ccw\")"
+    "lp.points_plotter(masked_points, extend=\"ccw\")\n",
+    "lp.points_plotter(deshifted_points, extend=\"ccw\")"
    ]
   },
   {
